
2005/10/31: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions to GWEN_NetLayer:
  - GWEN_NetLayer_RecvPacket()
  - GWEN_NetLayer_SendPacket()
  - GWEN_NetLayer_RecvPacketBio()
  - GWEN_NetLayer_SendPacketBio() (this is now used for HTTP requests)
- fixed a bug in nl_http.c (error in handling of chunked transfers)
- AqHBCI now works with the latest changes !!


2005/10/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_NetLayerHbci:
  This is to be used by AqHBCI. It determines the size of incoming messages
  and also encodes/decodes them to/from BASE64 if requested.
  This layer only handles the transport of HBCI messages, it neither parses
  nor generates HBCI messages.


2005/10/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker: added property "out" to "header" element (if value is "source"
  then the corresponding include will be written to the created source file,
  otherwise it will be written to the created header files).
  Possible values: "header", "source"
- implemented GWEN_NetLayerSsl (will replace GWEN_NetTransportSSL)
  Tested the following chains:
  - NetLayerSocket
  - NetLayerHttp->NetLayerSocket
  - NetLayerSsl->NetLayerSocket
  - NetLayerHttp->NetLayerSsl->NetLayerSocket
- src/crypt/*: added definition for structs which deal with SSL certificates
  and SSL ciphers. No longer use GWEN_DB_NODE for those things, because
  the tool typemaker makes it too easy to create real classes instead of the
  ugly hack with GWEN_DB_NODEs :-)
  - GWEN_SslCipher    : Cipher description (name, bits, description etc)
  - GWEN_SslCertDescr : representation of an SSL certificate


2005/10/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- started rewriting network code
- db.{h,c}:
  - when writing a db with GWEN_DB_FLAGS_USE_COLON then insert a space